# QuantAxis

./: .gitignore  LineTrace.md  README.md  pyproject.toml
client/: package-lock.json  package.json
client/src/: App.css  App.tsx  index.css  index.tsx
client/src/api/: client.ts  equity.ts  historical.ts  symbols.ts
client/src/components/: StockChart.css  StockChart.tsx
client/src/pages/: DetailsPage.css  DetailsPage.tsx  HomePage.css  HomePage.tsx
client/src/schema/: equity.ts  historical.ts  symbols.ts
server/: main.py  pyproject.toml
server/app/api/: __init__.py
server/app/api/controllers/: __init__.py
server/app/config/: cors.py  env.py
server/app/db/: __init__.py  dependencies.py  health.py  pool.py  schema.py  session.py
server/app/services/equity/: client.py  equity.py  historical.py  symbol.py  technicalIndicators.py
